# sp500-intraday-ranker

./: .gitignore  PLAN.md  README.md  pyproject.toml  veto_grid.out
data/universe/: universe.csv
picks/: picks_2026-07-17.csv  picks_2026-07-23.csv
scripts/: alpaca_client.py  backtest.py  data.py  dataset.py  evaluate.py  features.py  labels.py  model_aging.py  momentum_blend.py  run_all.py  scorecard.py  strategy.py  today.py  topn_sweep.py  train.py  transfer_test.py  universe.py  veto_grid.py  veto_overlay.py  veto_robustness.py
