[project]
name = "ranker-5d-sp500"
version = "0.1.0"
description = "Short-term (5-trading-day) cross-sectional momentum ranker on S&P 500 names, built from Alpaca 5-minute bars."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "alpaca-py>=0.21",
]
